syntax = "proto3";

import "google/protobuf/any.proto";
import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";

message LoadVertex {
    uint64 partition_id = 1;
    string vertex_id = 2;
}
message LoadVertexAck {
    uint64 partition_id = 1;
    string vertex_id = 2;
}

message SuperStepBarrier {
    ClusterInfo clusterInfo = 1;
}
message SuperStepBarrierAck {
    string vertex_id = 1;
}
message SuperStepBarrierPartitionAck {
    uint64 partition_id = 1;
}
message SuperStepBarrierWorkerAck {
    actor.PID worker_pid = 1;
}

message Compute {
    uint64 super_step = 1;
    map<string, google.protobuf.Any> aggregated_values = 2;
}
message ComputeAck {
    string vertex_id = 1;
    bool halted = 2;
    map<string, google.protobuf.Any> aggregated_values = 3;
}
message ComputePartitionAck {
    uint64 partition_id = 1;
    map<string, google.protobuf.Any> aggregated_values = 2;
}
message ComputeWorkerAck {
    actor.PID worker_pid = 1;
    map<string, google.protobuf.Any> aggregated_values = 2;
}

message SuperStepMessage {
    string uuid = 1;
    uint64 super_step = 2;
    string src_vertex_id = 3;
    string dest_vertex_id = 4;
    google.protobuf.Any message = 5;
}

message SuperStepMessageAck {
    string uuid = 1;
}

message InitPartition {
    uint64 partition_id = 1;
}
message InitPartitionAck {
    uint64 partition_id = 1;
}

message ClusterInfo {
    message WorkerInfo {
        actor.PID worker_pid = 1;
        repeated uint64 partitions = 2;
    }
    repeated WorkerInfo worker_info = 1;
}

message InitWorker {
    repeated uint64 partitions = 1;
}

message InitWorkerAck {
    actor.PID worker_pid = 1;
}

message NewCluster {
    message WorkerReq {
        bool remote = 1;
        string host_and_port = 2;
    }
    repeated WorkerReq workers = 1;
    uint64 nr_of_partitions = 2;
}

