syntax = "proto3";

message SSSPMessage {
    string from_vertex_id = 1;
    uint32 value = 2;
}
